--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    background-color: #01567a;
 }
 
 .page-block {
@@ -14,7 +15,7 @@ html, body {
 }
 
 .page-block:nth-child(odd) {
-    background-color: #0277ad;
+    background-color: #01567a;
     color: white;
 }
 
@@ -43,11 +44,12 @@ html, body {
 }
 
 .physics-color { background: #4dc1b8; }
-.mathematics-color { background-color: #0096b2; }
+.math-color { background-color: #0096b2; }
 .chemistry-color { background-color: #24505c; } 
 .lit-color { background-color: #4abc8d; }
 
-.page-block:nth-child(odd) .dropdown button {
+.page-block:nth-child(odd) .dropdown button,
+.edit-background .edit-block .dropup button {
     background-color: #0d4a64;
 }
 
@@ -55,8 +57,49 @@ html, body {
     color: black;
 }
 
-.page-block:nth-child(odd) .dropdown .radio {
+.dropdown .radio,
+.dropup .radio {
     margin: 0;
-    padding-top: 3px;
-    padding-bottom: 3px;
 }    
+
+.edit-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.493);
+    width: 100%;
+    height: 100%;
+
+    display: none;
+}
+
+.edit-background .edit-block {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    width: 100%;
+
+    background-color: #0277ad;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    display: none;
+}
+
+.edit-background .edit-block input,
+.edit-background .edit-block button {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+.selected-lesson::before {
+    font-weight: bold;
+    content: "--- "
+}
+
+.selected-lesson::after {
+    font-weight: bold;
+    content: " ---";
+}
